--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<h1>{{mensagem}}</h1>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand" href="">Task App</a>
+</nav>
 
-<button class="btn btn-success">Ok</button>
+<!--mt-2 -> Magin top 2 --- <hr/> -> Cria uma linha separadora -->
+<div class="container mt-4">
+  <h3>Tasks</h3>
+  <hr/>
+  <div class="row"> <!-- row -> vai consumir toda linha de cima com 12 posições-->
+    <div class="col-md-6"> <!--col-md-6 -> dentro da linha acima esta sendo colocado uma colouna com 6 posições-->
+      <input type="text" class="form-control">
+    </div>
+    <div class="col-md-2">
+       <button class="btn btn-primary">Add</button>
+    </div>
+  </div>
+</div>
