--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,23 @@
         </div>
       </div>
   </form>
+
+  <hr/>
+
+  <div class="row">
+    <div class="col-md-7">
+      <ul class="list-group">
+
+        <!-- *ngFor="" -> Diretiva do angular que vai percorrer a lista de tasks.
+              let task -> variavel local que representa a lista de -> tasks do app.component.ts -->
+        <li *ngFor="let task of tasks" class="list-group-item d-flex justify-content-between align-items-center">
+          {{task.description}}
+          <div class="btn-group">
+             <button class="btn btn-success">Done</button>
+             <button class="btn btn-danger">Delete</button>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
