--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,13 @@
       <ul class="list-group">
 
         <!-- *ngFor="" -> Diretiva do angular que vai percorrer a lista de tasks.
-              let task -> variavel local que representa a lista de -> tasks do app.component.ts -->
+              let task -> variavel local que representa a lista de -> tasks do app.component.ts 
+              (click)="delete(task) -> Evento de click que chama o metodo delete do app.component.ts -->
         <li *ngFor="let task of tasks" class="list-group-item d-flex justify-content-between align-items-center">
           {{task.description}}
           <div class="btn-group">
              <button class="btn btn-success">Done</button>
-             <button class="btn btn-danger">Delete</button>
+             <button class="btn btn-danger" (click)="delete(task)">Delete</button>
           </div>
         </li>
       </ul>
