--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,11 @@
           <input type="text" class="form-control" formControlName="description">
         </div>
         <div class="col-md-2">
-          <button class="btn btn-primary" type="submit">Add</button>
+          <button class="btn btn-primary" 
+                  type="submit" 
+                  [disabled]="!form.valid"> <!--[disabled]="!form.valid"> -> desabilita o botão ate serem digitados 4 dig -->
+                  Add
+                </button>
         </div>
       </div>
   </form>
